--- a/Resources/Private/Language/de.locallang_tca.xlf
+++ b/Resources/Private/Language/de.locallang_tca.xlf
@@ -9,6 +9,10 @@
 			<trans-unit id="description">
 				<target>TYPO3 Extension serves as a template for TYPO3 modules</target>
 			</trans-unit>
+
+			<trans-unit id="elements.record-type.default">
+				<target>Default</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
