Beispiel Anpassung overrideChildTca für tx_foundation_elements

--- a/Resources/Private/Language/locallang_tca.xlf
+++ b/Resources/Private/Language/locallang_tca.xlf
@@ -9,6 +9,10 @@
 			<trans-unit id="description">
 				<source>TYPO3 Extension serves as a template for TYPO3 modules</source>
 			</trans-unit>
+
+			<trans-unit id="elements.record-type.default">
+				<source>Default</source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
